@@ -1,4 +1,7 @@
 Changes in version 0.1.2.8-alpha - 2007-??-??
+  o Major bugfixes (accounting):
+    - 
+
   o Minor bugfixes (controller):
     - Give the controller END_STREAM_REASON_DESTROY events _before_ we
       clear the corresponding on_circuit variable, and remember later that
